--- a/public/asset/css/styles.css
+++ b/public/asset/css/styles.css
@@ -1364,7 +1364,6 @@ button:hover {
   */
   .formulaire {
     margin: 0 auto;
-    max-width: 24px;
   }
   /*
   **********************************
@@ -1665,14 +1664,14 @@ button:hover {
   border-radius: 10px;
   outline: 3px solid #ffffff;
   max-width: 600px;
-  margin: 20px;
+  margin: 20px auto;
 }
 .formulaire h2 {
   text-align: center;
   font-family: var(--ff-bangers);
   margin: 1%;
   color: #ffffff;
-  -webkit-text-stroke: 2px red;
+  -webkit-text-stroke: 1px red;
 }
 .formulaire input,
 .formulaire textarea {
@@ -1855,7 +1854,7 @@ button:hover {
   letter-spacing: var(--letter-spacing);
   font-size: 1rem;
   color: #f0f0f0;
-  text-shadow: -2px -2px 0 red, 2px -2px 0 red, -2px 2px 0 red, 2px 2px 0 red;
+  text-shadow: -1px -1px 0 red, 1px -1px 0 red, -1px 1px 0 red, 1px 1px 0 red;
 }
 .kakkoii .center {
   text-align: center;
@@ -1868,7 +1867,7 @@ button:hover {
   color: red;
   font-family: var(--ff-bangers);
   letter-spacing: var(--letter-spacing);
-  font-size: 1rem;
+  font-size: 0.8rem;
 }
 .kakkoii .center p {
   font-family: var(--ff-barlow);
@@ -1970,7 +1969,6 @@ button:hover {
 ***********404********************
 **********************************
 */
-/* filepath: /C:/wamp64/www/nihon/public/asset/css/styles.scss */
 .backgroundimage {
   position: relative;
   background: linear-gradient(90deg, rgb(255, 0, 0) 0%, rgb(138, 20, 20) 50%, rgb(153, 0, 0) 100%);
