--- a/public/asset/css/styles.css
+++ b/public/asset/css/styles.css
@@ -474,6 +474,12 @@ footer > p {
   display: flex;
   height: 100%;
 }
+.carousel-wrapper .red-background {
+  background-color: var(--primary-clr-red);
+}
+.carousel-wrapper .black-background {
+  background-color: #38383f;
+}
 
 .carousel-item {
   font-family: var(--ff-bangers);
@@ -484,7 +490,6 @@ footer > p {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: var(--primary-clr-red);
   font-size: 1.4rem;
   text-align: center;
 }
@@ -517,6 +522,9 @@ button {
 }
 
 .custom-btn {
+  font-family: var(--ff-barlow);
+  text-transform: uppercase;
+  font-size: 1.5rem;
   width: 130px;
   height: 40px;
   color: #fff;
@@ -532,7 +540,7 @@ button {
   outline: none;
 }
 .custom-btn.btn-green {
-  background: #b3b34e;
+  background: #2bbecc;
   padding: 0;
   border: none;
 }
@@ -555,7 +563,7 @@ button {
   content: "";
   left: 0;
   bottom: 0;
-  background: #231b19;
+  background: #10474d;
   transition: all 0.3s ease;
 }
 .custom-btn.btn-green span:before {
@@ -577,7 +585,7 @@ button {
   content: "";
   right: 0;
   top: 0;
-  background: #231b19;
+  background: #10474d;
   transition: all 0.3s ease;
 }
 .custom-btn.btn-green:before {
@@ -589,7 +597,7 @@ button {
   height: 2px;
 }
 .custom-btn.btn-green:hover {
-  background: #b3b34e;
+  background: #2bbecc;
   box-shadow: none;
 }
 .custom-btn.btn-green:hover:before {
@@ -785,11 +793,11 @@ button {
   font-size: 1.2rem;
 }
 .card-fav .bubble-fav p a {
-  color: black;
+  color: #cc1606;
   transition: all ease 0.3s;
 }
 .card-fav .bubble-fav p a:hover {
-  color: #202024;
+  color: #fab1d4;
 }
 
 /*
