--- a/public/asset/css/styles.css
+++ b/public/asset/css/styles.css
@@ -185,13 +185,11 @@ svg {
 .menu-mobile {
   display: flex;
   justify-content: space-between;
+  margin: 0 2vh;
 }
-.menu-mobile .test {
-  display: flex;
-}
-.menu-mobile .test input {
+.menu-mobile .mobile-input-header input {
   color: #333;
-  width: 22%;
+  width: 7vh;
   height: 5vh;
   padding: 0 10px;
   font-size: 1.2rem;
@@ -200,10 +198,10 @@ svg {
   border-radius: 50px;
   transition: all ease 0.8s;
 }
-.menu-mobile .test input:focus {
+.menu-mobile .mobile-input-header input:focus {
   border: 1px solid #cc392b;
   border-radius: 50px;
-  width: 80%;
+  width: 20vh;
   outline: none;
 }
 
@@ -1416,6 +1414,45 @@ button:hover {
 }
 .manga_category div:hover figure {
   opacity: 1;
+}
+
+/*
+**********************************
+***********SEARCH RESULT************
+**********************************
+*/
+#search-bar-desktop, #search-bar-mobile {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.loup-search {
+  display: flex;
+}
+
+#search-results-mobile, #search-results-desktop {
+  width: 110%;
+  background-color: #fab1d4;
+  justify-content: center;
+  margin-top: 1vh;
+  border-radius: 5px;
+}
+#search-results-mobile ul, #search-results-desktop ul {
+  padding: 5px 10px;
+}
+#search-results-mobile ul li a:first-child, #search-results-desktop ul li a:first-child {
+  font-weight: bold;
+  margin-right: 1vh;
+}
+#search-results-mobile ul li a, #search-results-desktop ul li a {
+  color: #0e0e0e;
+  margin: 1vh 0;
+  font-family: var(--ff-barlow);
+  transition: all 0.3s ease;
+}
+#search-results-mobile ul li a:hover, #search-results-desktop ul li a:hover {
+  color: #cc392b;
 }
 
 /*
