--- a/public/asset/css/styles.scss
+++ b/public/asset/css/styles.scss
@@ -227,12 +227,12 @@ svg {
 .menu-mobile {
   display: flex;
   justify-content: space-between;
+  margin: 0 2vh;
 
-  .test {
-    display: flex;
+  .mobile-input-header {
     input {
       color: #333;
-      width: 22%;
+      width: 7vh;
       height: 5vh;
       padding: 0 10px;
       font-size: 1.2rem;
@@ -243,7 +243,7 @@ svg {
       &:focus {
         border: 1px solid #cc392b;
         border-radius: 50px;
-        width: 80%;
+        width: 20vh;
         outline: none;
       }
     }
@@ -1609,6 +1609,50 @@ button:hover {
   }
 }
 
+/*
+**********************************
+***********SEARCH RESULT************
+**********************************
+*/
+
+#search-bar-desktop , #search-bar-mobile{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;  
+}
+.loup-search{
+    display: flex;
+  }
+#search-results-mobile , #search-results-desktop {
+  width: 110%;
+  background-color: #fab1d4;
+  justify-content: center;
+  margin-top: 1vh;
+  border-radius: 5px;
+
+
+  ul {
+    padding: 5px 10px;
+
+    li{
+      a:first-child{
+        font-weight: bold;
+        margin-right: 1vh;
+      }
+          a {
+      color: #0e0e0e;
+      margin: 1vh 0;
+      font-family: var(--ff-barlow);
+      transition: all 0.3s ease;
+      &:hover{
+        color: #cc392b;
+      }
+    }
+    }
+
+  }
+  
+}
 
 
 
