--- a/public/asset/css/styles.scss
+++ b/public/asset/css/styles.scss
@@ -509,6 +509,108 @@ footer > p {
 }
 }
 
+.login {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+
+  h1 {
+    font-family: var(--ff-bangers);
+    letter-spacing: var(--letter-spacing);
+    margin-bottom: 1.5rem;
+  }
+
+  input {
+    display: flex;
+    flex-direction: column;
+    border-radius: 10px;
+    background-color: var(--fc-light);
+    padding: 10px;
+    color: black;
+    border: 1px solid #ccc;
+    height: 40px;
+    margin-bottom: var(--mb-5);
+
+    &::placeholder {
+      color: #33333371;
+      font-family: var(--ff-barlow);
+      font-weight: 400;
+    }
+  }
+
+  .login {
+    background-color: #cc392b;
+    color: white;
+    padding: 10px 60px;
+    border-radius: 15px;
+    cursor: pointer;
+    font-family: var(--ff-bangers);
+    letter-spacing: var(--letter-spacing);
+    transition: all ease 0.3s;
+
+    &:hover {
+      background-color: #cc1606;
+    }
+    
+  }
+  button.togglePassword {
+    padding: 5px 10px;
+    display: flex;
+    border: none;
+    }
+}
+
+#img-connexion {
+  display: none;
+
+  img {
+    max-width: 50%;
+  }
+  
+}
+.password-container {
+  position: relative;
+  display: flex;
+  align-items: center;
+
+
+ input {
+  width: 100%;
+  padding-right: 40px;
+  height: 40px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding-left: 10px;
+    display: flex;
+    flex-direction: column;
+    border-radius: 10px;
+    background-color: var(--fc-light);
+    padding: 10px;
+    color: black;
+    margin-bottom: var(--mb-5);
+
+    &::placeholder {
+      color: #33333371;
+      font-family: var(--ff-barlow);
+      font-weight: 400;
+    }
+}
+
+.togglePassword {
+  position: absolute;
+  right: 10px;
+  background: none;
+  border: none;
+  cursor: pointer;
+
+  img {
+    width: 3vh;
+    text-align: center;
+  }
+}
+}
+
 
 
 
@@ -518,10 +620,280 @@ footer > p {
 **********************************
 */
 
+.connexion{
+  
 #img-subscrire {
   max-width: 90%;
   display: none;
 }
+
+.form-container {
+  opacity: 0; /* Initialement invisible */
+  transform: translateY(50px); /* Position initiale en dehors de l'écran */
+}
+
+.form-container input,
+.form-container button {
+  opacity: 0; /* Initialement invisible */
+  transform: translateY(20px); /* Position initiale en dehors de l'écran */
+}
+
+#img-subscrire {
+  opacity: 0; /* Initialement invisible */
+  transform: translateY(50px); /* Position initiale en dehors de l'écran */
+}
+.connexion {
+  background: #ade5f5;
+  color: #333;
+  font: 100% Arial, Sans Serif;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
+
+.cloud-content {
+  bottom: 0;
+  left: 0;
+  padding-top: 50px;
+  position: fixed;
+  right: 0;
+  top: 0;
+  z-index: -1;
+}
+
+.cloud-block {
+  position: absolute;
+  opacity: 0.8;
+}
+.cloud-1 {
+  top: 50px;
+}
+.cloud-2 {
+  top: 40vh;
+}
+.cloud-3 {
+  top: 20vh;
+}
+.cloud-4 {
+  top: 40vh;
+}
+.cloud-5 {
+  top: 65vh;
+}
+.cloud-6 {
+  top: 35vh;
+}
+.cloud-7 {
+  bottom: 30px;
+}
+
+.cloud-1 {
+  animation: animate-1 32s linear infinite;
+  -webkit-animation: animate-1 32s linear infinite;
+  transform: scale(0.65);
+  -webkit-transform: scale(0.65);
+}
+
+.cloud-2 {
+  animation: animate-2 37s linear infinite;
+  -webkit-animation: animate-2 37s linear infinite;
+  transform: scale(0.45);
+  -webkit-transform: scale(0.45);
+}
+
+.cloud-3 {
+  animation: animate-3 45s linear infinite;
+  -webkit-animation: animate-3 45s linear infinite;
+  transform: scale(0.5);
+  -webkit-transform: scale(0.5);
+}
+
+.cloud-4 {
+  animation: animate-4 50s linear infinite;
+  -webkit-animation: animate-4 50s linear infinite;
+  transform: scale(0.4);
+  -webkit-transform: scale(0.4);
+}
+
+.cloud-5 {
+  animation: animate-5 55s linear infinite;
+  -webkit-animation: animate-5 55s linear infinite;
+  transform: scale(0.55);
+  -webkit-transform: scale(0.55);
+}
+
+.cloud-6 {
+  animation: animate-6 60s linear infinite;
+  -webkit-animation: animate-6 60s linear infinite;
+  transform: scale(0.45);
+  -webkit-transform: scale(0.45);
+}
+
+.cloud-7 {
+  animation: animate-7 65s linear infinite;
+  -webkit-animation: animate-7 65s linear infinite;
+  transform: scale(0.5);
+  -webkit-transform: scale(0.5);
+}
+
+/* Cloud Objects */
+
+.cloud {
+  width: 350px;
+  height: 120px;
+  border-radius: 100px;
+  box-shadow: 0 16px 16px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: 0 16px 16px rgba(0, 0, 0, 0.1);
+  position: relative;
+  background: #fff;
+}
+
+.cloud:after,
+.cloud:before {
+  background: #fff;
+  content: "";
+  position: absolute;
+  z-index: -1;
+}
+
+.cloud:after {
+  width: 100px;
+  height: 100px;
+  left: 50px;
+  top: -50px;
+  border-radius: 100px;
+}
+
+.cloud:before {
+  width: 180px;
+  height: 180px;
+  right: 50px;
+  top: -90px;
+  border-radius: 200px;
+}
+
+/* KEYFRAMES */
+
+@keyframes animate-1 {
+  0% {
+    left: 90%;
+  }
+  10% {
+    left: 110%;
+  }
+  10.001% {
+    left: -10%;
+  }
+  100% {
+    left: 90%;
+  }
+}
+
+@keyframes animate-2 {
+  0% {
+    left: 75%;
+  }
+  25% {
+    left: 110%;
+  }
+  25.001% {
+    left: -10%;
+  }
+  100% {
+    left: 75%;
+  }
+}
+
+@keyframes animate-3 {
+  0% {
+    left: 60%;
+  }
+  40% {
+    left: 110%;
+  }
+  40.001% {
+    left: -10%;
+  }
+  100% {
+    left: 60%;
+  }
+}
+
+@keyframes animate-4 {
+  0% {
+    left: 45%;
+  }
+  55% {
+    left: 110%;
+  }
+  55.001% {
+    left: -10%;
+  }
+  100% {
+    left: 45%;
+  }
+}
+
+@keyframes animate-5 {
+  0% {
+    left: 30%;
+  }
+  70% {
+    left: 110%;
+  }
+  70.001% {
+    left: -10%;
+  }
+  100% {
+    left: 30%;
+  }
+}
+
+@keyframes animate-6 {
+  0% {
+    left: 10%;
+  }
+  90% {
+    left: 110%;
+  }
+  90.001% {
+    left: -10%;
+  }
+  100% {
+    left: 10%;
+  }
+}
+
+@keyframes animate-7 {
+  0% {
+    left: -10%;
+  }
+
+  99.99% {
+    left: 110%;
+  }
+  100% {
+    left: -10%;
+  }
+}
+
+/* Responsive media query */
+@media screen and (max-width: 767px) {
+  .cloud {
+    width: 300px;
+    height: 70px;
+  }
+  .cloud:before {
+    width: 120px;
+    height: 120px;
+    top: -80px;
+    right: 50px;
+  }
+
+}
+}
+
 
 /*
 **********************************
