--- a/public/asset/css/styles.css
+++ b/public/asset/css/styles.css
@@ -182,6 +182,14 @@ svg {
 ***********HEADER************
 **********************************
 */
+#user-pic-mobile {
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 100px;
+  width: 8vh;
+  height: 8vh;
+}
+
 .menu-mobile {
   display: flex;
   justify-content: space-between;
