--- a/public/asset/css/styles.css
+++ b/public/asset/css/styles.css
@@ -1068,7 +1068,7 @@ div.mangaPage svg.liked {
 }
 .head-profile div:first-child figure .change-picture {
   color: var(--fc-black);
-  background-color: #F2EBE8;
+  background-color: #f2ebe8;
 }
 .head-profile div:first-child figure .change-picture:hover {
   background-color: #fcc8e1;
@@ -1421,7 +1421,8 @@ button:hover {
 ***********SEARCH RESULT************
 **********************************
 */
-#search-bar-desktop, #search-bar-mobile {
+#search-bar-desktop,
+#search-bar-mobile {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -1431,27 +1432,32 @@ button:hover {
   display: flex;
 }
 
-#search-results-mobile, #search-results-desktop {
+#search-results-mobile,
+#search-results-desktop {
   width: 110%;
   background-color: #fab1d4;
   justify-content: center;
   margin-top: 1vh;
   border-radius: 5px;
 }
-#search-results-mobile ul, #search-results-desktop ul {
+#search-results-mobile ul,
+#search-results-desktop ul {
   padding: 5px 10px;
 }
-#search-results-mobile ul li a:first-child, #search-results-desktop ul li a:first-child {
+#search-results-mobile ul li a:first-child,
+#search-results-desktop ul li a:first-child {
   font-weight: bold;
   margin-right: 1vh;
 }
-#search-results-mobile ul li a, #search-results-desktop ul li a {
+#search-results-mobile ul li a,
+#search-results-desktop ul li a {
   color: #0e0e0e;
   margin: 1vh 0;
   font-family: var(--ff-barlow);
   transition: all 0.3s ease;
 }
-#search-results-mobile ul li a:hover, #search-results-desktop ul li a:hover {
+#search-results-mobile ul li a:hover,
+#search-results-desktop ul li a:hover {
   color: #cc392b;
 }
 
@@ -1573,7 +1579,8 @@ button:hover {
     margin: 1%;
     font-size: 1.5rem;
   }
-  .carousel .next, .carousel .prev {
+  .carousel .next,
+  .carousel .prev {
     width: 5vh;
     height: 5vh;
   }
@@ -2133,6 +2140,71 @@ button:hover {
 }
 .kakkoii .center button:hover {
   background-color: #cc1606;
+}
+
+/*
+**********************************
+***********404********************
+**********************************
+*/
+.backgroundimage {
+  position: relative;
+  background: linear-gradient(90deg, rgb(255, 0, 0) 0%, rgb(138, 20, 20) 50%, rgb(153, 0, 0) 100%);
+  height: 100vh;
+  background-size: cover; /* Assurez-vous que l'image couvre tout l'arrière-plan */
+  background-position: 0% 0%; /* Position initiale de l'arrière-plan */
+  overflow: hidden; /* Empêcher le défilement */
+}
+.backgroundimage .content {
+  text-align: center;
+  position: relative; /* Positionner le texte par rapport à l'élément parent */
+  z-index: 2; /* Assurez-vous que le contenu est au-dessus des shurikens */
+  top: 50%; /* Centrer verticalement */
+  left: 50%; /* Centrer horizontalement */
+  transform: translate(-50%, -50%); /* Ajuster pour centrer parfaitement */
+  color: white; /* Couleur du texte */
+  font-family: var(--ff-barlow); /* Police de caractères */
+  padding: 20px;
+  background-color: rgba(0, 0, 0, 0.5); /* Fond semi-transparent pour améliorer la lisibilité */
+  border-radius: 10px;
+  max-width: 600px; /* Limiter la largeur maximale */
+  width: auto; /* Utiliser la largeur automatique */
+  margin: 0 auto; /* Centrer horizontalement */
+  display: inline-block; /* Réduire la largeur au contenu */
+  -webkit-backdrop-filter: blur(10px);
+          backdrop-filter: blur(10px); /* Ajouter un flou au fond */
+}
+.backgroundimage .shuriken {
+  height: 10vw; /* Ajustez la hauteur selon vos besoins */
+  width: 10vw; /* Ajustez la largeur selon vos besoins */
+  position: absolute; /* Pour permettre le positionnement */
+  z-index: 1; /* Positionner les shurikens derrière le contenu */
+}
+.backgroundimage .shuriken.top {
+  top: 10px; /* Positionner en haut */
+  left: 50%;
+  transform: translateX(-50%);
+}
+.backgroundimage .shuriken.bottom {
+  bottom: 10px; /* Positionner en bas */
+  left: 50%;
+  transform: translateX(-50%);
+}
+.backgroundimage .button {
+  color: rgb(230, 10, 10);
+  font-weight: 400;
+}
+.backgroundimage h1 {
+  font-family: var(--ff-bangers);
+  letter-spacing: var(--letter-spacing);
+  font-size: 2rem;
+  color: #f0f0f0;
+  text-shadow: -1px -1px 10px red, 1px -1px 10px red, -1px 1px 10px red, 1px 1px 10px red;
+}
+.backgroundimage p {
+  font-family: var(--ff-barlow);
+  font-size: 1rem;
+  color: #ffffff;
 }
 
 /*
