Le v est passé par la

--- a/public/asset/css/styles.css
+++ b/public/asset/css/styles.css
@@ -2184,6 +2184,11 @@ button:hover {
   cursor: pointer;
 }
 
+/*
+**********************************
+********ANIMATION HOMEPAGE********
+**********************************
+*/
 .wrap {
   overflow: hidden;
   position: fixed;
