--- a/public/asset/css/styles.scss
+++ b/public/asset/css/styles.scss
@@ -2760,7 +2760,11 @@ h2{
 
 
 
-
+/*
+**********************************
+********ANIMATION HOMEPAGE********
+**********************************
+*/
 
 .wrap {
   overflow: hidden;
